<resources>
    <string name="app_name">SiPekaAPILL</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="password_didnot_match">Password did not match with confirm password</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_rationale1">"Read Phone State permissions are needed for login."
    </string>
    <string name="title_activity_master">MasterActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_nama">Full Name</string>
    <string name="hint_usernama">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_c_password">Confirm Password</string>
    <string name="btn_sign_up">Simpan</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_uname">Enter your Username</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="spinner_title">Select Category</string>
    <string name="API_KEY">
    AIzaSyB8MX7cCDtO03mxmyIeU4Vt8c3ovLopouI
    </string>
    <string name="title_activity_maps">Tracking</string>
</resources>
